# bio

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
biocore/: Cargo.toml
biocore/src/: aminoacid.rs  bcf.rs  dna.rs  fasta.rs  genome.rs  lib.rs  location.rs  mutation.rs  rna.rs  sequence.rs  vcf.rs
ensembl/: Cargo.toml
ensembl/src/: lib.rs  resource.rs
ensembl/src/contig/: grch37_meta.rs  grch38_meta.rs  mod.rs
genomes1000/: Cargo.toml
genomes1000/examples/: load_all.rs
genomes1000/src/: contig.rs  genotype.rs  info.rs  lib.rs  parse.rs  pedigree.rs  reference_genome.rs  resource.rs  simplified.rs  slow.rs  source.rs
genomes1000/src/contig/: grch37_meta.rs  grch38_meta.rs  mod.rs
genomes1000/src/headers/: header.chr1.vcf  header.chr10.vcf  header.chr11.vcf  header.chr12.vcf  header.chr13.vcf  header.chr14.vcf  header.chr15.vcf  header.chr16.vcf  header.chr17.vcf  header.chr18.vcf  header.chr19.vcf  header.chr2.vcf  header.chr20.vcf  header.chr21.vcf  header.chr22.vcf  header.chr3.vcf  header.chr4.vcf  header.chr5.vcf  header.chr6.vcf  header.chr7.vcf  header.chr8.vcf  header.chr9.vcf  header.chrX.vcf  header.chrY.vcf  header.others.vcf
hail/: Cargo.toml
hail/src/: lib.rs  resource.rs  source.rs
hail/src/contig/: grch37_meta.rs  grch38_meta.rs  mod.rs
ids/: Cargo.toml
liftover/: Cargo.toml
liftover/docs/: chainfile_spec.html
liftover/examples/: load_all.rs
liftover/src/: lib.rs  parse.rs  sources.rs
liftover/src/bindings/: mod.rs
liftover/src/bindings/ucsc/: cli.rs  mod.rs  web.rs
liftover/tests/: .gitignore  annotation.rs  fuzz.rs
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh37_to_GRCh38.chain.gz/: range_testpoints.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh37_to_NCBI34.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh37_to_NCBI35.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh37_to_NCBI36.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh38_to_GRCh37.chain.gz/: range_testpoints.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh38_to_NCBI34.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh38_to_NCBI35.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/GRCh38_to_NCBI36.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/NCBI34_to_GRCh37.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/NCBI34_to_GRCh38.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/NCBI35_to_GRCh37.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/NCBI35_to_GRCh38.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/NCBI36_to_GRCh37.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ensembl/assembly_mapping/homo_sapiens/NCBI36_to_GRCh38.chain.gz/: range_testpoints.jsonl  range_testpoints_internal.jsonl  range_testpoints_uscs.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/data/ucsc/goldenPath/hg10/liftOver/hg10ToHg16.over.chain.gz/: range_testpoints.jsonl  snp_testpoints.jsonl  snp_testpoints_internal.jsonl  snp_testpoints_uscs.jsonl
liftover/tests/fuzz/: internal.rs  testpoints.rs  ucsc.rs
pan_ukbb/: Cargo.toml
pan_ukbb/src/: lib.rs
pgs_catalog/: Cargo.toml
pgs_catalog/docs/: docs.html
pgs_catalog/examples/: load_all.rs
pgs_catalog/src/: lib.rs  metadata.rs  simplified.rs
primeedit/: Cargo.toml
primeedit/src/: design_spec.rs  edit.rs  editor.rs  lib.rs
puv/: Cargo.toml  README.md
puv/src/: function.rs  lib.rs  map.rs  metadata.rs  script.rs
utile/: Cargo.toml
utile/src/: any.rs  cache.rs  collections.rs  drop.rs  fmt.rs  io.rs  iter.rs  jsonl.rs  lib.rs  num.rs  plot.rs  range.rs  regex_ext.rs  resource.rs  serde_ext.rs  task.rs  time.rs  value.rs  wsl.rs
utile/src/fs/: mod.rs  safe_path.rs
utile/src/python/: function.rs  map.rs  script.rs
utile/src/resource/: cached.rs  compression.rs  iter.rs  mod.rs  uri.rs
(+178 files in other folders)
