[package]
name = "biocore"
version = "0.1.0"
edition = "2021"

[dependencies]
utile = { path = "../utile" }

anyhow = "1"
noodles = { version = "0.97", features = ["core", "fasta", "vcf", "tabix", "bgzf", "csi", "bcf"] }
ref-cast = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"
