[package]
name = "biocore"
version = "0.1.0"
edition = "2021"

[dependencies]
utile = { path = "../utile" }

noodles = { version = "0.98", features = ["core", "fasta", "vcf", "tabix", "bgzf", "csi", "bcf"] }
ref-cast = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"
