[package]
name = "pgs_catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
biocore = { path = "../biocore" }
ids = { path = "../ids" }
utile = { path = "../utile" }

csv = "1"
log = "0.4"
ordered-float = { version = "5", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
url = { version = "2", features = ["serde"] }


[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
