[package]
name = "primeedit"
version = "0.1.0"
edition = "2024"

[dependencies]
biocore = { path = "../biocore" }
utile = { path = "../utile" }

diff = "0.1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1.9"
rand = { version = "0.9", features = ["small_rng"] }
