[package]
name = "puv"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["io-util"] }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["fs", "process"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
