[package]
name = "puv"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
log = "0.4"
memchr = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["fs", "process"] }
# TODO: vendor and slim them down to compile on wasm?
uv-pep440 = { git = "https://github.com/QuartzLibrary/uv", rev = "9e4c4eb53147c5fc8f59da6a6757ff0022664aa4" }
uv-pep508 = { git = "https://github.com/QuartzLibrary/uv", rev = "9e4c4eb53147c5fc8f59da6a6757ff0022664aa4" }
uv-scripts = { git = "https://github.com/QuartzLibrary/uv", rev = "9e4c4eb53147c5fc8f59da6a6757ff0022664aa4" }
uv-workspace = { git = "https://github.com/QuartzLibrary/uv", rev = "9e4c4eb53147c5fc8f59da6a6757ff0022664aa4" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
