[package]
name = "utile"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4", default-features = false, features = ["tokio", "gzip", "brotli"] }
brotli = "8"
bytes = "1"
directories = "6"
either = "1"
flate2 = "1"
futures = "0.3"
hyperx = { version = "1", git = "https://github.com/QuartzLibrary/hyperx", rev = "b4bf9e31a8a8676bb0ce229fec36a140e0d096f7" } # branch = "bump"
indicatif = { version = "0.17", features = ["tokio"] }
log = "0.4"
pin-project = "1"
plotly = "0.12"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
url = { version = "2", features = ["serde"] }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
suppaftp = { version = "6", features = ["async"] }
tokio = { version = "1", features = ["fs", "process"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
_getrandom = { version = "0.2", features = ["js"], package = "getrandom" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
